--- a/index.html
+++ b/index.html
@@ -277,11 +277,9 @@
     <div class="header">
         <button class="toggle-sidebar" onclick="toggleSidebar()">☰ 菜单</button>
         <div class="search-bar">
-    <div class="header">
-        <div class="search-bar">
-            <input type="text" id="searchInput" placeholder="搜索应用">
-            <button onclick="performSearch()">搜索</button>
-        </div>
+    <div class="search-bar">
+    <input type="text" id="searchInput" placeholder="搜索应用">
+    <button onclick="performSearch()">搜索</button>
     </div>
    </div>
 
@@ -2449,7 +2447,31 @@
                 performSearch();
             }
         });
+        </script>
 
+    <script>
+function performSearch() {
+    var searchInput = document.getElementById('searchInput');
+    var searchText = searchInput.value.toLowerCase();
+
+    // 获取所有的应用项目
+    var appItems = document.querySelectorAll('.app-item');
+
+    // 遍历每个应用项目,检查是否匹配搜索关键词
+    for (var i = 0; i < appItems.length; i++) {
+        var appName = appItems[i].querySelector('.app-name').textContent.toLowerCase();
+        var appCategory = appItems[i].querySelector('.app-category').textContent.toLowerCase();
+
+        if (appName.includes(searchText) || appCategory.includes(searchText)) {
+            appItems[i].classList.remove('hidden');
+        } else {
+            appItems[i].classList.add('hidden');
+        }
+    }
+}
+    </script>
+    
+        <script>
         function refreshPage() {
             location.reload();
         }
