--- a/index.html
+++ b/index.html
@@ -2422,6 +2422,28 @@
                 <div class="rating">1.0 ★ <span class="app-size">18.02MB</span></div>
             </div>
         </div>
+
+        <div class="app-item">
+            <img src="https://via.placeholder.com/50" alt="广告拦截" class="app-icon">
+            <div class="app-info">
+                <div class="app-name">
+                    <a href="https://share.feijipan.com/s/8hDAgCvQ" style="color: black; text-decoration: none;">Invizible_pro</a>
+                    </div>
+                <div class="app-category">实用・工具</div>
+                <div class="rating">1.0 ★ <span class="app-size">36.32MB</span></div>
+            </div>
+        </div>
+
+        <div class="app-item">
+            <img src="https://via.placeholder.com/50" alt="广告拦截" class="app-icon">
+            <div class="app-info">
+                <div class="app-name">
+                    <a href="https://share.feijipan.com/s/I5EFuEuQ" style="color: black; text-decoration: none;">AdGuard</a>
+                    </div>
+                <div class="app-category">实用・工具</div>
+                <div class="rating">1.0 ★ <span class="app-size">53.40MB</span></div>
+            </div>
+        </div>
     </div>
 
     <button class="floating-refresh" onclick="refreshPage()">〇</button>
