--- a/index.html
+++ b/index.html
@@ -2556,6 +2556,26 @@
                 <div class="app-category">实用・模拟器</div>
                 <div class="rating">1.0 ★ <span class="app-size">150MB</span></div>
             </div>
+
+            <div class="app-item">
+            <img src="https://via.placeholder.com/50" alt="AdGuard" class="app-icon">
+            <div class="app-info">
+                <div class="app-name">
+                    <a href="https://share.feijipan.com/s/I5EFuEuQ" >AdGuard</a>
+                    </div>
+                <div class="app-category">实用・工具</div>
+                <div class="rating">1.0 ★ <span class="app-size">58.40MB</span></div>
+            </div>
+
+                <div class="app-item">
+            <img src="https://via.placeholder.com/50" alt=" class="app-icon">
+            <div class="app-info">
+                <div class="app-name">
+                    <a href="https://share.feijipan.com/s/8hDAgCvQ" >Invisible_Pro</a>
+                    </div>
+                <div class="app-category">实用・模拟器</div>
+                <div class="rating">1.0 ★ <span class="app-size">36.32MB</span></div>
+            </div>
             </article>
     </main>
 
