--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <li><a href="http://www.caoliuxs.vip/">成人免费草榴小说</a></li>
             <li><a href="https://sesebooks.com/">免费成人黄涩小说</a></li>
             <li><a href="https://www.fanqianglu.com/free/cnnovel">免费成人涩情小说最全</a></li>
-            <li><a href="#">涩情性爱故事网站</a></li>
+            <li><a href="https://theporndude.com/zh/best-erotic-stories-sites">涩情性爱故事网站</a></li>
         </ul>
     </aside>
 
